Making Netlify Forms work (or trying to) XX

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -149,6 +149,10 @@ header {
     color: #333;
 }
 
+.hidden-subscription-form {
+    display: none;
+}
+
 /*****************************************
 *           Navigation Menu              *
 ******************************************/
